# IrelandML

./: README.md  pyproject.toml  setup.cfg  setup.py
IrelandML/: __init__.py  assets.py  pickleView.py  resources.py  structured_asset1.py  structured_asset2.py
data/: structured_data1.csv  structured_data2.csv
tmp5b7mrc89/history/: runs.db
tmp5b7mrc89/history/runs/: 02ace1a0-919b-43a4-abcf-92a7febd7fba.db  0b22746d-97b7-4d0c-863e-358bc0ef301b.db  122c8c6e-8add-46c3-866e-360d0e7e61a9.db  1b1a78eb-0fde-460a-bdbe-c4db10a698f3.db  3a9cf569-ea72-4280-8622-85c93a236c86.db  445e4d75-5c3b-45b2-aef5-2460fc3f137a.db  55edc52e-32c7-491b-8170-5b6fac3606cf.db  5c25ebd7-2325-42b5-bc4d-81522b484589.db  5c585466-c152-4054-980f-acd0203265d2.db  63e9c44d-744f-41c8-86f3-b6c277685d93.db  index.db  (+10 more)
tmp5b7mrc89/schedules/: schedules.db
tmp5b7mrc89/storage/: analysis_results  model_metrics_2  prediction_unstructured_results  prepared_data  raw_data
tmp85uy3mj5/history/: runs.db
tmp85uy3mj5/schedules/: schedules.db
tmp85uy3mj5/storage/: analyze_unstructured_data  load_unstructured_data  model_metrics  model_metrics_2  predict_unstructured_results  prediction_unstructured_results  prepared_data_2  preprocess_unstructured_data
tmpqkxsf3t9/history/: runs.db
tmpqkxsf3t9/schedules/: schedules.db
tmpqkxsf3t9/storage/: model_metrics  prediction_unstructured_results  raw_data_2
tmpqwagmznf/history/: runs.db
tmpqwagmznf/schedules/: schedules.db
tmpu9rw1twz/storage/: model_metrics  prediction_results  prediction_results_2  prediction_unstructured_results
(+42 files in other folders)
